add_executable(fundamental-type-sizes fundamental_type_sizes.cc)
add_test(fundamental-type-sizes-test fundamental-type-sizes)

add_executable(limits limits.cc)
add_test(limits-test limits)

add_executable(print-chars print_chars.cc)
add_test(print-chars-test print-chars)

add_executable(signed-unsigned-chars signed_unsigned_chars.cc)
add_test(signed-unsigned-chars-test signed-unsigned-chars)
